# promptops

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.promptops/config/: promptops.json
files/: PromptOps_Project_Plan.docx  PromptOps_SystemDesign.docx
promptops/api/: app.py
promptops/cli/: commands.py  main.py
promptops/core/: models.py  versioning.py
promptops/deploy/: engine.py
promptops/eval/: engine.py  scorers.py
prompts/examples/: customer_support.yaml  summarization.yaml
prompts/templates/: base_template.yaml  my_depl_prompt.yaml
prompts/templates/.promptops/: .gitignore
prompts/templates/.promptops/config/: promptops.json
scripts/db/: init_db.py
test-prompts/: my_first_prompt.yaml
tests/: test_setup.py
